feat(roles): show members when expanding a role
